fix whitespace issue on mobile screens

--- a/src/components/layout/scrollbar.css
+++ b/src/components/layout/scrollbar.css
@@ -1,7 +1,11 @@
 .simplebar-scrollbar::before {
-    background: #797979 !important;
+	background: #797979 !important;
 }
 
 .simplebar-scrollbar.simplebar-visible::before {
-    opacity: 0.7;
+	opacity: 0.7;
+}
+
+.simplebar-content-wrapper {
+	overflow-x: hidden !important;
 }
